--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,6 @@
 <script src="https://unpkg.com/vue-router@4"></script>
 
 <div id="app">
-  <h1>Hello App!</h1>
-  <p>
-    <!-- use the router-link component for navigation. -->
-    <!-- specify the link by passing the `to` prop. -->
-    <!-- `<router-link>` will render an `<a>` tag with the correct `href` attribute -->
-    <router-link to="/">Go to Home</router-link>
-    <router-link to="/join">Join queue</router-link>
-  </p>
-  <!-- route outlet -->
-  <!-- component matched by the route will render here -->
+  <h1>Oneque</h1>
   <router-view></router-view>
 </div>
